--- a/_posts/2021-09-28-dip.md
+++ b/_posts/2021-09-28-dip.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+author: Kevin
 title: DIP - 변경에 유연하고 테스트하기 좋은 코드 설계
 date: 2021-09-28 13:32:20 +0300
 description: 요구 사항 변경에 유연하게 대처할 수 있는 구조의 코드는 소프트웨어의 지속적인 성장을 위한 초석입니다.
@@ -61,6 +62,7 @@ public class UserService {
 > GitHubContributionCalculator.java
 
 ```java
+@RequiredArgsConstructor
 @Component
 public class GithubContributionCalculator {
 
@@ -167,6 +169,7 @@ public interface PlatformContributionCalculator {
 > GitHubContributionCalculator.java
 
 ```java
+@RequiredArgsConstructor
 @Component
 public class GithubContributionCalculator implements PlatformContributionCalculator {
 
