chore: author 제거

--- a/_posts/2021-09-28-dip.md
+++ b/_posts/2021-09-28-dip.md
@@ -1,6 +1,5 @@
 ---
 layout: post
-author: Kevin
 title: DIP - 변경에 유연하고 테스트하기 좋은 코드 설계
 date: 2021-09-28 13:32:20 +0300
 description: 요구 사항 변경에 유연하게 대처할 수 있는 구조의 코드는 소프트웨어의 지속적인 성장을 위한 초석입니다.
@@ -10,7 +9,7 @@ tags: [백엔드, SOLID]
 
 ## 1. 들어가며
 
-클린 코드 관련 저서들이 공통적으로 강조하는 내용은 단연 **변경에 유연하고 테스트하기 좋은 코드의 중요성**입니다. 소프트웨어는 항상 변경이 발생하기 쉽습니다. 요구 사항이 변경될 때마다 코드를 대거 수정해야 한다면 유지보수 측면에서 좋지 않습니다. 요구 사항 변경에 유연하게 대처할 수 있는 구조의 코드는 소프트웨어의 지속적인 성장을 위한 초석입니다.
+안녕하세요, 케빈입니다. 클린 코드 관련 저서들이 공통적으로 강조하는 내용은 단연 **변경에 유연하고 테스트하기 좋은 코드의 중요성**입니다. 소프트웨어는 항상 변경이 발생하기 쉽습니다. 요구 사항이 변경될 때마다 코드를 대거 수정해야 한다면 유지보수 측면에서 좋지 않습니다. 요구 사항 변경에 유연하게 대처할 수 있는 구조의 코드는 소프트웨어의 지속적인 성장을 위한 초석입니다.
 
 > a code smell is any characteristic in the source code of a program that possibly indicates a deeper problem.
 
