refactor: 썸네일 변경

--- a/_posts/2021-09-30-테스트코드 최적화 여행기 (1).md
+++ b/_posts/2021-09-30-테스트코드 최적화 여행기 (1).md
@@ -3,7 +3,7 @@ layout: post
 title: 테스트코드 최적화 여행기 (1)
 date: 2021-09-30 11:35:00 +0300
 description: Pickgit의 테스트코드 최적화 방법을 소개합니다.
-img: infra.png
+img: https://user-images.githubusercontent.com/33603557/135377928-7cc3e90e-0c30-4501-82bb-8bd981f1dd97.png
 tags: [백엔드, test, 최적화]
 ---
 
