refactor: 손너잘 글 썸네일 추가.

--- a/_posts/2021-09-30-변경에 유연한 설계, 우리는 2가지 종류의 DTO를 쓴다.md
+++ b/_posts/2021-09-30-변경에 유연한 설계, 우리는 2가지 종류의 DTO를 쓴다.md
@@ -3,7 +3,7 @@ layout: post
 title: 변경에 유연한 설계, 우리는 2가지 종류의 DTO를 쓴다!
 date: 2021-09-30 15:02:00 +0300
 description: 깃들다의 유연한 설계를 위한 DTO 운용 방법에 대하서 서술합니다.
-img: database.png
+img: twodto.png
 tags: [백엔드, 설계, DTO]
 ---
 
