--- a/_posts/2021-09-30-우리는 왜 CI-CD에 실패하였는가.md
+++ b/_posts/2021-09-30-우리는 왜 CI-CD에 실패하였는가.md
@@ -3,7 +3,7 @@ layout: post
 title: 우리는 왜 CI/CD에 실패하였는가?
 date: 2021-09-30 12:00:00 +0300
 description: Pickgit의 테스트코드 최적화 방법을 소개합니다.
-img: https://user-images.githubusercontent.com/33603557/135378389-92ad8c60-3451-4e18-818c-9847429e5a99.png
+img: ci-cd.png
 tags: [백엔드, CI/CD]
 ---
 
